# opengl-dev

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  main.h
Include/: color.h  constants.h  draw.h  engine.h  evo.h  game.h  game_time.h  main.h  program.h  shader.h  time.h  vao.h  vbo.h  vector_2f.h  vector_3f.h  vertex.h  vertex_test.h  window.h
Include/Game logic/: game.h  game_time.h  input.h  time.h
Include/Logs/: logger.h
Include/Math/: camera.h  matrix4f.h  matrix_4f.h  quaternion.h  transform.h  vector_2f.h  vector_3f.h
Include/OpenGL Graphics/: color.h  constants.h  draw.h  material.h  mesh.h  program.h  render.h  res_loader.h  shader.h  texture.h  vao.h  vbo.h  vertex.h  vertex_test.h  window.h
Include/Stb/: stdb_image.h
Resources/Shaders/: default.frag  default.vert
src/: app.cpp  color.cpp  constants.cpp  draw.cpp  engine.cpp  evo.cpp  game.cpp  game_time.cpp  main.cpp  material.cpp  program.cpp  shader.cpp  time.cpp  vao.cpp  vbo.cpp  vector_2f.cpp  vector_3f.cpp  vertex.cpp  vertex_test.cpp  window.cpp
src/Engine/: engine.cpp  engine.h
src/Game logic/: game.cpp  game.h  game_time.cpp  game_time.h  input.cpp  input.h  time.cpp
src/Logs/: log.txt  logger.cpp  logger.h
src/Math/: camera.cpp  camera.h  matrix4f.cpp  matrix_4f.cpp  matrix_4f.h  quaternion.cpp  quaternion.h  transform.cpp  transform.h  vector_2f.cpp  vector_2f.h  vector_3f.cpp  vector_3f.h
src/OpenGL Graphics/: buffer_layout.h  color.cpp  color.h  constants.cpp  draw.cpp  evo.cpp  index_buffer.cpp  index_buffer.h  material.cpp  material.h  mesh.cpp  mesh.h  program.cpp  render.cpp  renderer.cpp  renderer.h  res_loader.cpp  res_loader.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vbo.cpp  vertex.cpp  vertex.h  vertex_array_buffer.cpp  vertex_array_buffer.h  vertex_buffer.cpp  vertex_buffer.h  window.cpp  window.h
tests/: matrices_test.cpp  vertex_test.cpp
